--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-
-Jennifer Huang <133@holbertonschool.com>
-Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com> 
+Karimi Yvonne<karimiyvonne19@gmail.com>
+Brian Sakwa <sakwabrian23#gmail.com> 
